# nosy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  bacon.toml
.cargo/: mutants.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: cell.rs  convert.rs  filter.rs  future.rs  gate.rs  lib.rs  listener.rs  listeners.rs  load_store.rs  maybe_sync.rs  notifier.rs  simple_listeners.rs  source.rs  store.rs  store_lock.rs  util.rs
src/source/: flatten.rs  map.rs
src/sync_or_not/: README.md
tests/api/: future.rs  listener.rs  load_store.rs  main.rs  static_properties.rs  store.rs  store_ref.rs  tools.rs
tests/api/any_flavor/: cell.rs  filter.rs  gate.rs  mod.rs  notifier.rs  simple_listeners.rs  source.rs  store.rs  store_and_store_ref.rs  store_lock.rs
xtask/: Cargo.toml
xtask/src/: main.rs
